--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,10 @@ body {
   height: 64px;
   background-color: #ecefff;
   z-index: 1065;
+  border-bottom: none !important;
+  box-shadow: none !important;
+
+
 }
 
 @media (min-width: 768px) {
@@ -47,6 +51,13 @@ body {
     margin-left: 260px;
   }
 }
+
+@media (min-width: 768px) {
+  .sidebar .nav {
+    margin-top: 1rem !important;
+  }
+}
+
 
 .sidebar .nav-link {
   color: #495057;
@@ -137,7 +148,7 @@ body {
 
 /* Sidebar nav push down */
 .sidebar .nav {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 /* Sezione titoli sidebar */
@@ -152,4 +163,9 @@ body {
   padding-left: 0.25rem;
   opacity: 0.7;
   border-bottom: 1px solid #dee2e6;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    padding-top: .3rem !important; /* 👈 riduce lo spazio sopra il menu */
+  }
 }
